--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stories-api",
-  "version": "1.0.0-dev",
+  "name": "stories-server",
+  "version": "1.1.0-dev",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -9,8 +9,10 @@
   "keywords": [],
   "author": "marllonmendez",
   "license": "ISC",
-  "description": "",
+  "description": "API Stories",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "dayjs": "^1.11.11",
     "prisma": "^5.14.0",
     "tsx": "^4.10.5",
@@ -20,6 +22,8 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.14.0",
-    "fastify": "^4.27.0"
+    "bcrypt": "^5.1.1",
+    "fastify": "^4.27.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
